<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginVertical="20dp"
    android:layout_marginHorizontal="20dp"
    tools:context=".Comprobacion">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comTit"
                android:textSize="24dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comTit2"
                android:textSize="18dp"
                android:textAlignment="center"
                android:textStyle="normal"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="95dp">

        <TextView
            android:id="@+id/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 9 "
            android:textSize="25dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/signo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" + "
            android:textSize="25dp"
            android:textAlignment="center"/>

        <TextView

            android:id="@+id/num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 5  "
            android:textSize="25dp"
            android:textAlignment="center"/>

        <TextView
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" ="
            android:textSize="25dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/compro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botComp"
            android:onClick="compro"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginVertical="30dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/salida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:layout_marginHorizontal="45dp"
            />

        <TextView
            android:id="@+id/salida2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menuDespl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="12dp"/>


        <Spinner
            android:id="@+id/opciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </Spinner>

    </LinearLayout>

</LinearLayout>